--- a/.gitmodules
+++ b/.gitmodules
@@ -42,3 +42,6 @@
 	path = tools/tblCRCTool
 	url = https://github.com/nasa/tblCRCTool.git
   branch = main
+[submodule "apps/mm"]
+	path = apps/mm
+	url = https://github.com/nasa/mm.git
