--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "cfe"]
 	path = cfe
-	url = https://github.com/nasa/cFE.git
+	url = https://github.com/codingJang/cFE.git
 	branch = main
 [submodule "osal"]
 	path = osal
